# AudioBrowser

./: .dockerignore  .gitignore  AudioBrowser.csproj  AudioBrowser.sln  Cargo.toml  Dockerfile  Options.cs  Program.cs  appsettings.json
.github/workflows/: main.yml
Components/: App.razor  _Imports.razor
Components/Layout/: NavMenu.razor
Components/Pages/: Home.razor
Properties/: launchSettings.json
Services/: WatcherService.cs  XAttrsService.cs
assets/: home.js  reset.css  styles.css
src/: main.rs
src/templates/: file_listing.html  file_listing.rs  file_listing_entry.html  file_listing_entry.rs  home.html  home.rs  mod.rs
