[package]
name = "AudioBrowser"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["form"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
xattr = "1.3.1"