[package]
name = "AudioBrowser"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["form", "tokio"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
xattr = "1.3.1"
notify = "8.0.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }